discussion/kv_engine/162658/162658_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48506: Make updating Checkpoint::queuedItemsMemUsage O(1) at expel

@todo

Change-Id: I92c4ecf10293c7776de9333b717a4b254583692f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-10-03 13:33:45.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-03 13:38:00.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34575/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34575/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40641/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40641/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14641/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14641/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14910/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14910/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2661/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2661/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15481/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15481/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13789/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13789/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22926/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22926/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2697/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13044/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/atomic.h:200:40: error: member access into incomplete type "Item" [clang-diagnostic-error]
        if (value != nullptr && --value->_rc_refcount == 0) {
                                       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_construct.h:140:19: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::~SingleThreadedRCPtr" requested here
      __pointer->~_Tp();
                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/list.tcc:77:24: note: in instantiation of function template specialization "std::allocator_traits<MemoryTrackingAllocator<std::_List_node<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > > >::destroy<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > >" requested here
          _Node_alloc_traits::destroy(_M_get_Node_allocator(), __val);
                              ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_list.h:499:9: note: in instantiation of member function "std::__cxx11::_List_base<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >, MemoryTrackingAllocator<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > >::_M_clear" requested here
      { _M_clear(); }
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_list.h:673:7: note: in instantiation of member function "std::__cxx11::_List_base<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >, MemoryTrackingAllocator<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > >::~_List_base" requested here
      list() = default;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:21:7: note: forward declaration of "Item"
class Item;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13044/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/atomic.h:200:40:
error: member access into incomplete type "Item" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13044/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11831/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
